<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:id="@+id/event_type_layout_id"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorDark">

  <TextView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center"
    android:fontFamily="Roboto"
    android:textSize="25sp"
    android:textColor="#FFFFFF"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:text="Report"/>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</LinearLayout>
