<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".LoginFragment">

  <include
    android:id="@+id/loginLayout"
    layout="@layout/onboarding_layout" />

</FrameLayout>